# okta-ai-agents-crewai

./: .env.example  .gitignore  LICENSE  MAC-QUICKSTART.md  README.md  RUNBOOK.md  monitor  monitor_crew.py  okta_auth.py  pyproject.toml  requirements.txt  run.py  sample_output.md  setup.sh  smoke_test.py
docs/: SECURING-CREWAI-WITH-OKTA.md
terraform/: crewai_monitor.tf.example
